# solution-cpp-macos

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp  std.h
